# EnDeCryptor

./: .gitignore  CMakeLists.txt  README.md
Include/: App.h  Crypto.h  MainFrame.h
Source/: App.cpp  Crypto.cpp  MainFrame.cpp
